metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/CSM_Milestone__c.object-meta.xml
<CustomObject>
    <description>Defines CSM milestones for a CSM Stage, Product and Success Level</description>
    <label>CSM Milestone</label>
    <nameField>
        <label>CSM Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSM Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>