metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/fields/Order_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Execution__c</fullName>
    <description>Order of the execution compared to other milestones (available to admins only)</description>
    <inlineHelpText>Order of the execution compared to other milestones</inlineHelpText>
    <label>Order of Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>