metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/fields/Playbook_URL__c.field-meta.xml
<CustomField>
    <fullName>Playbook_URL__c</fullName>
    <description>Link to the playbook that explains how to process the milestone</description>
    <inlineHelpText>Specify the playbook that explains how to execute the milestone for the chosen product families, level(s), and the stage</inlineHelpText>
    <label>Playbook URL</label>
    <type>Url</type>
</CustomField>