metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/fields/Product_Families__c.field-meta.xml
<CustomField>
    <fullName>Product_Families__c</fullName>
    <description>Specifies what product families this milestone is applicable for</description>
    <inlineHelpText>Choose the product families this milestone will be applicable to</inlineHelpText>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>