metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/fields/Success_Levels__c.field-meta.xml
<CustomField>
    <fullName>Success_Levels__c</fullName>
    <description>Defines what success levels for the chosen products this milestone is applicable for</description>
    <inlineHelpText>Select success level(s) to enable this milestone for specified products</inlineHelpText>
    <label>Success Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Success_Levels</valueSetName>
    </valueSet>
</CustomField>