metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/fields/Success_Stage__c.field-meta.xml
<CustomField>
    <fullName>Success_Stage__c</fullName>
    <description>Defines what CSM stage this milestone is part of</description>
    <inlineHelpText>Choose the stage the milestone will be applicable to</inlineHelpText>
    <label>Success Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>