metadata/sf-prod/force-app/main/default/objects/CSM_Milestone__c/listViews/All_CSM_Milestones.listView-meta.xml
<ListView>
    <fullName>All_CSM_Milestones</fullName>
    <columns>Order_of_Execution__c</columns>
    <columns>NAME</columns>
    <columns>Success_Stage__c</columns>
    <columns>Product_Families__c</columns>
    <columns>Success_Levels__c</columns>
    <columns>Playbook_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>